Performed required changes

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>My Portfolio</title>
+    <link rel="stylesheet" type="text/css" href="css/styles.css"
 </head>
 
 <body>
@@ -32,6 +33,24 @@
           - Switch out your lorem ipsum for Hipster Ipsum (https://hipsum.co/)
           - In your contact me section, make the text "Phone:" and "Email:" bolded
      -->
+     <div>
+      <h1>Gokhan Kula</h1>
+      <h2>Software Developer</h2>
+      <hr>
+      <p>My <i>favorite</i> thing about programming is to solve problems</p>
+      <img src="./images/portrait1.jpg" alt="my picture">
+      <h3>About me</h3>
+      <p class="aboutme">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed malesuada justo sem, in iaculis leo vestibulum ac. Sed id libero eu diam finibus egestas. Duis sapien diam, facilisis sed volutpat ac, ullamcorper tempor mauris. Donec placerat a orci nec dictum. Praesent felis eros, suscipit ut orci ultrices, tincidunt ornare ante. Cras viverra imperdiet libero, sed suscipit diam eleifend quis. Nullam quam tellus, accumsan id bibendum id, ultrices vitae velit. Proin efficitur ut nisl et pulvinar.</p>
+      <h3>My Projects</h3>
+      <ul>
+        <li>Project 1</li>
+        <li>Project 2</li>
+        <li>Project 3</li>
+      </ul>
+      <h3>Contact me</h3>
+      <p><b>Phone:</b> (202) 555-1234</p>
+      <a href="mailto:fake@email.com"><b>Email:</b> fake@email.com </a>
+    </div>
 </body>
 
 </html>
